[tool.poetry]
name = "eight-api"
version = "0.1.0"
description = ""
authors = ["Tomasz Niedziela-Brach <niedziela.brach@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
flask-migrate = "^2.5.3"
flask-cors = "^3.0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
